# Exam

./: CMakeLists.txt  EXAM.cpp  lab_8.h
ext/SFML/include/SFML/Graphics/: Image.hpp
